# Polyfoni

./: .prettierrc  index.html  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
python/: evaluator.py  requirements.txt
src/: App.svelte  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/python/: evaluator.py  evaluator.spec  funcs.py
src-tauri/python/lib/: rand.py  wave.py
src-tauri/res/: builtin_aliases.yaml  builtin_consts.yaml  demo_project.plfn  empty_project.plfn  ornaments.yaml
src-tauri/res/python/: evaluator.py
src-tauri/src/: eval.rs  evaluation.rs  main.rs  midi_player.rs
src/architecture/: GlobalEventListener.ts  Model.ts  StateHierarchyWatcher.ts  Stateful.ts  mouse-event-handling.ts  state-hierarchy-utils.ts
src/custom-css/: base-styles.css  components.css  variables.css
src/custom-css/tippy_themes/: default.css
src/lib/: aliases.ts  change-tracker.ts  controller.ts  generator.ts  interval.ts  models.ts  observer.ts
src/lib/architecture/: IdProvider.ts  ShortcutManager.ts  StateHierarchyWatcher.ts  Stateful.ts  ViewModel.ts  ViewModelView.ts  state-hierarchy-utils.ts
src/lib/components/: GhostItem.svelte  (+13 more)
src/old_lib/: change-tracker.ts  generator.ts  hotkeys.ts
src/utils/: array-utils.ts  compareArrays.ts  css-utils.ts  dom-utils.ts  keyboard-shortcut.ts  math-utils.ts  midiInstrumentFamilies.ts  purifyArrays.ts  svelte-utils.ts
wasm_midi_player/: Cargo.toml
wasm_midi_player/src/: lib.rs
(+448 files in other folders)
