[package]
name = "revolution"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
itertools = "0.12.0"
rustysynth = "1.3.1"
tauri = { version = "1.5", features = [ "global-shortcut-all", "shell-open"] }
tinyaudio = "0.1.2"
workerpool = "1.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
