[package]
name = "revolution"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
cpal = "0.15.3"
itertools = "0.12.0"
open = "5.1.3"
oxisynth = "0.0.5"
tauri = { version = "1.5", features = [ "window-set-title", "dialog-open", "fs-read-file", "protocol-asset", "path-all", "fs-read-dir", "fs-write-file", "dialog-save", "global-shortcut-all", "shell-open"] }
web-sys = "0.3.69"
workerpool = "1.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
